OMS-002 Save aggregated event into dynamodb